# CSC422_Project

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
obj_classify/: __init__.py  __main__.py  inference.py  parse_off.py
obj_classify/model/: __init__.py
obj_classify/training/: __init__.py  train.py
